sumo/tests/sumo/extended/vaporizer/errors/begin_negative/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: A vaporization begin is negative (edge id='middle').
Quitting (on error).
